[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.529412, 0.67451, 0.803922, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PausePanel"]
anchor_right = 1.0
margin_left = 44.0
margin_top = 42.0
margin_right = -36.0
margin_bottom = 105.0
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="PausePanel"]
anchor_right = 0.5
margin_left = 28.6718
margin_top = 517.562
margin_right = -16.3282
margin_bottom = 570.562
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="PausePanel"]
anchor_left = 0.5
anchor_right = 1.0
margin_left = 32.0804
margin_top = 519.149
margin_right = -21.9196
margin_bottom = 572.149
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeOption" type="OptionButton" parent="PausePanel"]
anchor_right = 1.0
margin_left = 133.738
margin_top = 184.585
margin_right = -127.262
margin_bottom = 232.585
text = "Game Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBoard" type="VBoxContainer" parent="ScorePanel"]
anchor_right = 1.0
anchor_bottom = 0.8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="ScorePanel/ScoreBoard"]
margin_top = 197.0
margin_right = 400.0
margin_bottom = 211.0
text = "Combo: 000"
align = 1

[node name="StreakLabel" type="Label" parent="ScorePanel/ScoreBoard"]
margin_top = 215.0
margin_right = 400.0
margin_bottom = 229.0
text = "Streak: 000"
align = 1

[node name="BallsLabel" type="Label" parent="ScorePanel/ScoreBoard"]
margin_top = 233.0
margin_right = 400.0
margin_bottom = 247.0
text = "Lost Balls: 000"
align = 1

[node name="TimeLabel" type="Label" parent="ScorePanel/ScoreBoard"]
margin_top = 251.0
margin_right = 400.0
margin_bottom = 265.0
text = "Time: 00:00.000"
align = 1

[node name="ScoreLabel" type="Label" parent="ScorePanel/ScoreBoard"]
margin_top = 269.0
margin_right = 400.0
margin_bottom = 283.0
text = "Score: 00000"
align = 1

[node name="NewGameButton" type="Button" parent="ScorePanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.4223
margin_top = -70.8551
margin_right = -85.5778
margin_bottom = -21.8551
button_mask = 7
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PausePanel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PausePanel/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="item_selected" from="PausePanel/GameModeOption" to="." method="_on_GameModeOption_item_selected"]
[connection signal="pressed" from="ScorePanel/NewGameButton" to="." method="_on_NewGameButton_pressed"]
